# CUDA_SeamCarving

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/: conv.h  gpu_timer.h  gpu_utils.h  gpu_v1.h  gpu_v1_1.h  gpu_v1_2.h  gpu_v1_3.h  gpu_v2.h  host.h  host_utils.h  seam.h
src/: conv.cu  gpu_utils.cu  gpu_v1.cu  gpu_v1_1.cu  gpu_v1_2.cu  gpu_v1_3.cu  gpu_v2.cu  host.cu  host_utils.cu  main.cu  seam_v1.cu
test/: conv_tests.cu  energy_map_test.cu  full_test.cu  gpu_v1_1_gen.cu  gpu_v1_gen.cu  gpu_v2_gen.cu  host_answer_gen.cu  seam_test.cu
